--- a/src/app/pages/pages.component.html
+++ b/src/app/pages/pages.component.html
@@ -1,1 +1,8 @@
-<p>pages works!</p>
+<app-header></app-header>
+<app-sidebar></app-sidebar>
+<div class="content-wrapper">
+    <app-breadcrumbs></app-breadcrumbs>
+    <router-outlet></router-outlet>
+</div>
+<app-footer></app-footer>
+
