--- a/src/app/pages/productos/productos.component.html
+++ b/src/app/pages/productos/productos.component.html
@@ -6,9 +6,19 @@
       <div class="card-body">
         <div class="row">
           <div class="col-12 col-sm-6">
-            <h3 class="d-inline-block d-sm-none">
+            <h3 class="d-inline-block d-sm-none"> 
               LOWA Men’s Renegade GTX Mid Hiking Boots Review
             </h3>|
+            <!-- <div class="col-12">
+              <img src="../../dist/img/prod-1.jpg" class="product-image" alt="Product Image">
+            </div>
+            <div class="col-12 product-image-thumbs">
+              <div class="product-image-thumb active"><img src="../../dist/img/prod-1.jpg" alt="Product Image"></div>
+              <div class="product-image-thumb" ><img src="../../dist/img/prod-2.jpg" alt="Product Image"></div>
+              <div class="product-image-thumb" ><img src="../../dist/img/prod-3.jpg" alt="Product Image"></div>
+              <div class="product-image-thumb" ><img src="../../dist/img/prod-4.jpg" alt="Product Image"></div>
+              <div class="product-image-thumb" ><img src="../../dist/img/prod-5.jpg" alt="Product Image"></div>
+            </div> -->
             <div class="col-12">
               <img [src]="activeImageSrc" class="product-image" alt="Product Image">
             </div>
@@ -16,7 +26,7 @@
               <div class="product-image-thumb" *ngFor="let image of imageArray" (click)="handleImageClick(image.src)">
                 <img [src]="image.src" alt="Product Image">
               </div>
-            </div>
+            </div>            
           </div>
           <div class="col-12 col-sm-6">
             <h3 class="my-3">
